// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: Step wrapper 1`] = `
<Step
  finished={false}
  onOpen={[MockFunction]}
  open={false}
  renderForm={[Function]}
  stepTitle="onboarding.tutorial.with.jenkins.prereqs.title"
/>
`;

exports[`should render correctly: content 1`] = `
<div
  className="boxed-group-inner"
>
  <Alert
    className="big-spacer-bottom"
    variant="warning"
  >
    <SentenceWithHighlights
      highlightKeys={
        [
          "installed",
          "configured",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.prereqs.intro"
    />
  </Alert>
  <ul
    className="list-styled big-spacer-bottom"
  >
    <li>
      onboarding.tutorial.with.jenkins.prereqs.plugins.branch_source.bitbucket
    </li>
    <li>
      onboarding.tutorial.with.jenkins.prereqs.plugins.sonar_scanner
    </li>
  </ul>
  <p
    className="big-spacer-bottom"
  >
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.jenkins.prereqs.step_by_step_guide"
      id="onboarding.tutorial.with.jenkins.prereqs.step_by_step_guide"
      values={
        {
          "link": <withAppStateContext(DocLink)
            to="/analyzing-source-code/ci-integration/jenkins-integration/"
          >
            onboarding.tutorial.with.jenkins.prereqs.step_by_step_guide.link
          </withAppStateContext(DocLink)>,
        }
      }
    />
  </p>
  <p
    className="big-spacer-bottom"
  >
    onboarding.tutorial.with.jenkins.prereqs.following_are_recommendations
  </p>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    onboarding.tutorial.with.jenkins.prereqs.done
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;

exports[`should render correctly: content for branches disabled 1`] = `
<div
  className="boxed-group-inner"
>
  <Alert
    className="big-spacer-bottom"
    variant="warning"
  >
    <SentenceWithHighlights
      highlightKeys={
        [
          "installed",
          "configured",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.prereqs.intro"
    />
  </Alert>
  <ul
    className="list-styled big-spacer-bottom"
  >
    <li>
      onboarding.tutorial.with.jenkins.prereqs.plugins.sonar_scanner
    </li>
  </ul>
  <p
    className="big-spacer-bottom"
  >
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.jenkins.prereqs.step_by_step_guide"
      id="onboarding.tutorial.with.jenkins.prereqs.step_by_step_guide"
      values={
        {
          "link": <withAppStateContext(DocLink)
            to="/analyzing-source-code/ci-integration/jenkins-integration/"
          >
            onboarding.tutorial.with.jenkins.prereqs.step_by_step_guide.link
          </withAppStateContext(DocLink)>,
        }
      }
    />
  </p>
  <p
    className="big-spacer-bottom"
  >
    onboarding.tutorial.with.jenkins.prereqs.following_are_recommendations
  </p>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    onboarding.tutorial.with.jenkins.prereqs.done
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;

exports[`should render correctly: content for branches disabled, gitlab 1`] = `
<div
  className="boxed-group-inner"
>
  <Alert
    className="big-spacer-bottom"
    variant="warning"
  >
    <SentenceWithHighlights
      highlightKeys={
        [
          "installed",
          "configured",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.prereqs.intro"
    />
  </Alert>
  <ul
    className="list-styled big-spacer-bottom"
  >
    <li>
      onboarding.tutorial.with.jenkins.prereqs.plugins.gitlab_plugin
    </li>
    <li>
      onboarding.tutorial.with.jenkins.prereqs.plugins.sonar_scanner
    </li>
  </ul>
  <p
    className="big-spacer-bottom"
  >
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.jenkins.prereqs.step_by_step_guide"
      id="onboarding.tutorial.with.jenkins.prereqs.step_by_step_guide"
      values={
        {
          "link": <withAppStateContext(DocLink)
            to="/analyzing-source-code/ci-integration/jenkins-integration/"
          >
            onboarding.tutorial.with.jenkins.prereqs.step_by_step_guide.link
          </withAppStateContext(DocLink)>,
        }
      }
    />
  </p>
  <p
    className="big-spacer-bottom"
  >
    onboarding.tutorial.with.jenkins.prereqs.following_are_recommendations
  </p>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    onboarding.tutorial.with.jenkins.prereqs.done
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;
